# CialloBot

./: .env.example  .gitignore  ADDING_DELETE_BUTTON_GUIDE.md  CHANGELOG_DELETE_FEATURE.md  FINAL_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KEYWORD_SYSTEM.md  LOGGING_MIGRATION.md  PRINT_TO_LOGURU_MIGRATION.md  PRIVACY_POLICY.md  PROJECT_CLEANUP_PLAN.md  QUICK_START.md  QUICK_START_DELETE_FEATURE.md  QUICK_START_KEYWORD.md  StartUp.cmd  TERMS_OF_SERVICE.md  TESTING_DELETE_FEATURE.md  UPDATE_SUMMARY_v2.md  bot.py  copypastas.json  deepsource.toml  discordv2.md  pyproject.toml  requirements.txt  ruff.toml
bread/: __init__.py  constants.py
cogs/: beatmap_cog.py  bread_cog.py  copypasta_cog.py  era_game.py  help_cog.py  keyword_cog.py  osu_cog.py  pp_cog.py  user_cog.py  utility_cog.py
config/: __init__.py  secrets.py  settings.py
docs/: bread-shop-migration-plan.md
eraTW/: EmueraLazyLoadingV2.CT
locales/: en.json  zh_TW.json
private/: __init__.py  config.sample.py  server_keywords.sample.json  user_bindings.sample.json  user_lang_prefs.sample.json
scripts/: upload_era_images.py  upload_era_sprites.py
tests/: test_bread_cog.py  test_bread_gameplay_utils.py  test_bread_logic.py  test_bread_ranking_view.py  test_bread_record_service.py  test_bread_record_view.py  test_bread_settings_service.py  test_bread_target_nicknames.py  test_help_cog.py  test_help_locales.py
utils/: base_modal.py  base_view.py  beatmap_utils.py  command_tree.py  delete_view.py  error_handler.py  exceptions.py  interaction_guards.py  localization.py  log_intercept.py  message_tracker.py  (+5 more)
(+3519 files in other folders)
